# ScanDroneX

./: launch.sh  plan joy.md  plan.md  plan_odom.md
scandronex_sim/: CMakeLists.txt
scandronex_sim/config/: joy_teleop.yaml
scandronex_sim/launch/: scandronex_sim.launch.py
scandronex_sim/urdf/: sjtu_drone_with_lidar.urdf.xacro
src/ScanDroneXLaunch/: CMakeLists.txt  package.xml
src/ScanDroneXLaunch/launch/: ScanDroneX.launch.xml
src/cmd_vel_ekf/: CMakeLists.txt  package.xml
src/cmd_vel_ekf/include/cmd_vel_ekf/: cmd_vel_ekf_node.hpp
src/cmd_vel_ekf/launch/: cmd_vel_ekf.launch.py
src/cmd_vel_ekf/src/: cmd_vel_ekf_node.cpp
src/cmd_vel_odom/: CMakeLists.txt  package.xml
src/cmd_vel_odom/include/cmd_vel_odom/: cmd_vel_odom_node.hpp  odom_disagreement_node.hpp  odom_switch_node.hpp  slam_scan_toggle_node.hpp
src/cmd_vel_odom/src/: cmd_vel_odom_node.cpp  main.cpp  odom_disagreement_main.cpp  odom_disagreement_node.cpp  odom_switch_main.cpp  odom_switch_node.cpp  slam_scan_toggle_main.cpp  slam_scan_toggle_node.cpp
src/corners_detector/: CMakeLists.txt  package.xml
src/corners_detector/include/corners_detector/: corners_detector_node.hpp
src/corners_detector/src/: corners_detector_node.cpp
src/ekf_localization/: CMakeLists.txt  package.xml
src/ekf_localization/config/: ekf_params.yaml
src/ekf_localization/launch/: ekf.launch.py
src/joy_teleop_cpp/: CMakeLists.txt  package.xml
src/joy_teleop_cpp/include/joy_teleop_cpp/: joy_teleop_node.hpp
src/joy_teleop_cpp/src/: joy_teleop_node.cpp
src/kalman_odom/: CMakeLists.txt  package.xml
src/kalman_odom/include/kalman_odom/: kalman_odom_node.hpp
src/kalman_odom/src/: kalman_odom_node.cpp  main.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/BehaviorLayer/include/: BehaviorNode.hpp  BehaviorPlanner.hpp  LaneNode.hpp
src/navigation/BehaviorLayer/src/: BehaviorNode.cpp  BehaviorPlanner.cpp
src/navigation/ControlLayer/include/: Control.hpp  ControlNode.hpp
src/navigation/ControlLayer/src/: Control.cpp  ControlNode.cpp
src/navigation/LocalPlannerLayer/include/: HybridAstar.hpp  LocalPlanner.hpp  LocalPlannerNode.hpp
src/navigation/LocalPlannerLayer/src/: HybridAstar.cpp  LocalPlanner.cpp  LocalPlannerNode.cpp
src/navigation/Localization/include/: Localization.hpp
src/navigation/Localization/src/: Localization.cpp
src/navigation/MissionLayer/include/: Astar.hpp  MissionPath.hpp  MissionPathNode.hpp  Node.hpp
src/navigation/MissionLayer/src/: Astar.cpp  MissionPath.cpp  MissionPathNode.cpp
src/navigation/MotionPlannerLayer/include/: MotionPlanner.hpp  MotionPlannerNode.hpp
src/navigation/MotionPlannerLayer/src/: MotionPlanner.cpp  MotionPlannerNode.cpp
src/navigation/ObstacleMap/include/: ObstacleMap.hpp  ObstacleMapNode.hpp
src/navigation/ObstacleMap/src/: ObstacleMap.cpp  ObstacleMapNode.cpp
src/navigation/ScanLayer/include/: ScanLayer.hpp  ScanNode.hpp
src/navigation/ScanLayer/src/: ScanLayer.cpp  ScanNode.cpp
src/navigation/Utils/include/: ControlUtils.hpp  DistMap.hpp  Pid.hpp
src/navigation/Utils/src/: ControlUtils.cpp  DistMap.cpp  Pid.cpp
src/navigation/config/: behavior_params.yaml  control_params.yaml  local_planner_params.yaml  mission_planner_params.yaml  motion_planner_params.yaml  obstacle_map_params.yaml  scan_params.yaml
src/navigation/launch/: navigation.launch.py
src/navigation_msgs/: CMakeLists.txt  package.xml
src/navigation_msgs/msg/: DistMapMsg.msg  DroneState.msg  Lane.msg  LaneCluster.msg  PathMsg.msg  WorldPoint.msg
src/openings_detector/: CMakeLists.txt  package.xml
src/openings_detector/include/openings_detector/: openings_detector_node.hpp
src/openings_detector/src/: openings_detector_node.cpp
src/rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2DNode.h
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py  rf2o_laser_odometry_sim.launch.py
src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
src/scandronex_sim/: CMakeLists.txt  package.xml
src/scandronex_sim/config/: joy_teleop.yaml
src/scandronex_sim/launch/: scandronex_sim.launch.py
src/scandronex_sim/worlds/: world2.world  world3.world
src/sjtu_drone/: .gitignore  Dockerfile  README.md  build_docker.sh  run_docker.sh
src/sjtu_drone/.agent/: task_state.json
src/sjtu_drone/.devcontainer/: devcontainer.json
src/sjtu_drone/sjtu_drone_bringup/: package.xml  setup.cfg  setup.py
src/sjtu_drone/sjtu_drone_description/: CMakeLists.txt  README.md  package.xml
src/sjtu_drone/sjtu_drone_description/include/sjtu_drone_description/: pid_controller.h  plugin_drone.h  plugin_drone_private.h
src/sjtu_drone/sjtu_drone_description/models/sjtu_drone/: model.config  sjtu_drone.sdf
src/sjtu_drone/sjtu_drone_description/src/: plugin_drone_gz.cpp  plugin_drone_private.cpp
src/sjtu_drone/sjtu_drone_description/test/: test_integration.cpp  test_model_sdf.cpp  test_pid_controller.cpp  test_plugin_drone_configure.cpp  test_plugin_drone_dynamics.cpp  test_world_loads.cpp
src/sjtu_drone/sjtu_drone_description/urdf/: sjtu_drone.urdf  sjtu_drone.urdf.xacro
src/sjtu_drone/sjtu_drone_description/worlds/: empty.world  generate_maze.py  maze.world  playground.world
src/slam/: CMakeLists.txt  package.xml
src/slam/config/: YNavmap.data  mapper_params_online_async.yaml  mapper_params_online_localization.yaml  mapper_params_online_localization_sim.yaml  rviz.rviz  rviz_conf.rviz  teb_params.yaml
src/slam/launch/: house_map.data  montifyori.data  sim_place2.data  slam.launch.py  slam_localization.launch.py  slam_localization_sim.launch.py  yogev.data
src/slam_toolbox/: README.md  package.xml
src/slam_toolbox/config/: mapper_params_lifelong.yaml  mapper_params_localization.yaml  mapper_params_offline.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml
src/slam_toolbox/src/: loop_closure_assistant.cpp  slam_mapper.cpp  slam_toolbox_common.cpp
src/teleop_twist_joy/: CMakeLists.txt  package.xml
src/teleop_twist_joy/include/teleop_twist_joy/: teleop_twist_joy_export.h
src/worlds/: world1
(+16 files in other folders)
