<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel_odom</name>
  <version>0.0.1</version>
  <description>Generates odometry from cmd_vel commands and broadcasts the odom_cmd_vel TF frame.</description>
  <maintainer email="todo@todo.com">yogev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
