<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scandronex_sim</name>
  <version>0.1.0</version>
  <description>Drone simulator using sjtu_drone with 2D LiDAR in Gazebo Classic (ROS 2 Humble)</description>
  <maintainer email="user@example.com">yogev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Drone model -->
  <depend>sjtu_drone_description</depend>
  <depend>sjtu_drone_bringup</depend>

  <!-- Gazebo -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Joystick -->
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
