<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sjtu_drone_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="georg.novtony@aon.at">Georg Novotny</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <build_depend>gz_sim_vendor</build_depend>
  <build_depend>gz_plugin_vendor</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/share/sjtu_drone_description/models"/>
    <gazebo_ros plugin_path="${prefix}/lib/sjtu_drone_description"/>
  </export>
</package>
